Server-side events implementation, endpoint to logout a user (#41)
